Add header component and main background color and text color

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -1,9 +1,16 @@
 :root {
     box-sizing: border-box;
+    --app-background-color: #131316;
+    --app-text-color: #F2F2F3;
 }
 
 *,
 ::before,
 ::after {
     box-sizing: inherit;
+}
+
+body {
+    background-color: var(--app-background-color);
+    color: var(--app-text-color);
 }
